--- a/public/fonts/gendy.css
+++ b/public/fonts/gendy.css
@@ -6,3 +6,6 @@
   src: local(''), url('gendy.otf') format('otf'),
     /* Chrome 26+, Opera 23+, Firefox 39+ */ url('gendy.otf') format('otf'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+:root {
+  --font-gendy: 'Gendy', sans-serif;
+}
